style: adjust map center but still has ext resize issue
- tile should change it's w,h based on screen size (should consider the scrollbar)

--- a/src/devtools/game/app.css
+++ b/src/devtools/game/app.css
@@ -428,6 +428,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -444,8 +449,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: grid;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .w-screen {
   width: 100vw;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .flex-wrap {
@@ -491,22 +504,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 1rem;
 }
 
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
 .text-green-400 {
   --tw-text-opacity: 1;
   color: rgb(74 222 128 / var(--tw-text-opacity));
 }
 
-/*.tile {*/
-
-/*  width: 200px;*/
-
-/*  height: 200px;*/
-
-/*}*/
-
 .tile div {
-  width: 20px;
-  height: 20px;
   border: 1px solid darkolivegreen;
 }
 
